Melhorias + Substituicao Comissao

--- a/public/css/pedidoBloqueado.css
+++ b/public/css/pedidoBloqueado.css
@@ -1,10 +1,10 @@
-table.dataTable {
+/* table.dataTable {
     table-layout: fixed;
-}
+} */
 
-div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
+/* div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
     display: none;
-}
+} */
 
 @media (max-width: 768px) {
     #table-item-pedido_wrapper {
